<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit">Submit</string>
    <string name="details">%1$1d learning hours, %2$s</string>
    <string name="score">%1$1d Skill IQ score, %2$s</string>
    <string name="title_activity_submit">Project Submission</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GitHub (Link)</string>
</resources>